# emp-sh2pc

./: .gitignore  CMakeLists.txt  emp-sh2pc.vcxproj
emp-sh2pc/: semihonest.h  semihonest_eva.h  semihonest_gen.h
example/: semi_honest.cpp
semihonest/: semihonest_eva.h  semihonest_gen.h
test/: all.cpp  bit.cpp  circuit_file.cpp  emp-sh2pc-tests.vcxproj  float.cpp  int.cpp
